Fix header menu on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -536,6 +536,8 @@ footer img {
     #menuModal{
         display: none;
         position: fixed;
+        align-items: start;
+        justify-content: start;
         top: 0;
         left: 0;
         padding-top: 5vh;
@@ -558,6 +560,14 @@ footer img {
         font-size: 1.7em;
         font-weight: 600;
         margin-bottom: 5px;
+    }
+    .modal-content {
+        background-color: #f3f3f3;
+        padding: 20px;
+        border-radius: 10px;
+        width: 300px;
+        text-align: start;
+        box-shadow: none;
     }
     .modal-content .menu-btn{
         display: flex;
